Instant Address Standard/main/default/objects/ServiceOutput__c/ServiceOutput__c.object-meta.xml
<CustomObject>
    <label>Service Output</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Service Output Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Outputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>