Instant Address Standard/main/default/objects/ServiceOutput__c/fields/AddressChangeFlags__c.field-meta.xml
<CustomField>
    <fullName>AddressChangeFlags__c</fullName>
    <label>AddressChangeFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>