Instant Address Standard/main/default/objects/ServiceOutput__c/fields/AddressChangeFlagsDescription__c.field-meta.xml
<CustomField>
    <fullName>AddressChangeFlagsDescription__c</fullName>
    <label>Address Change Flags Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>