Instant Address Standard/main/default/objects/ServiceOutput__c/fields/AugmentedBuilding__c.field-meta.xml
<CustomField>
    <fullName>AugmentedBuilding__c</fullName>
    <label>Augmented Building</label>
    <length>40</length>
    <type>Text</type>
</CustomField>