Instant Address Standard/main/default/objects/ServiceOutput__c/fields/BaseAlterNameCodeFlag__c.field-meta.xml
<CustomField>
    <fullName>BaseAlterNameCodeFlag__c</fullName>
    <label>BaseAlterNameCodeFlag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>