Instant Address Standard/main/default/objects/ServiceOutput__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <length>60</length>
    <type>Text</type>
</CustomField>