Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CarrierRouteFlag__c.field-meta.xml
<CustomField>
    <fullName>CarrierRouteFlag__c</fullName>
    <label>Carrier Route Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>