Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CarrierRouteID__c.field-meta.xml
<CustomField>
    <fullName>CarrierRouteID__c</fullName>
    <label>Carrier Route ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>