Instant Address Standard/main/default/objects/ServiceOutput__c/fields/cbsa__c.field-meta.xml
<CustomField>
    <fullName>cbsa__c</fullName>
    <label>Core Based Statistical Area Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>