Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CityDeliveryFlag__c.field-meta.xml
<CustomField>
    <fullName>CityDeliveryFlag__c</fullName>
    <label>City Delivery Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>