Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CityStateKey__c.field-meta.xml
<CustomField>
    <fullName>CityStateKey__c</fullName>
    <label>City State Key</label>
    <length>6</length>
    <type>Text</type>
</CustomField>