Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CMRA__c.field-meta.xml
<CustomField>
    <fullName>CMRA__c</fullName>
    <label>CMRA</label>
    <length>1</length>
    <type>Text</type>
</CustomField>