Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CongressionalDistrictID__c.field-meta.xml
<CustomField>
    <fullName>CongressionalDistrictID__c</fullName>
    <label>Congressional District ID</label>
    <length>2</length>
    <type>Text</type>
</CustomField>