Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CountryID__c.field-meta.xml
<CustomField>
    <fullName>CountryID__c</fullName>
    <label>Country ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>