Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>Country Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>