Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CountyID__c.field-meta.xml
<CustomField>
    <fullName>CountyID__c</fullName>
    <label>County ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>