Instant Address Standard/main/default/objects/ServiceOutput__c/fields/CountyName__c.field-meta.xml
<CustomField>
    <fullName>CountyName__c</fullName>
    <label>County Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>