Instant Address Standard/main/default/objects/ServiceOutput__c/fields/csa__c.field-meta.xml
<CustomField>
    <fullName>csa__c</fullName>
    <label>Combined Statistical Area Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>