Instant Address Standard/main/default/objects/ServiceOutput__c/fields/DataPostRetentionElement__c.field-meta.xml
<CustomField>
    <fullName>DataPostRetentionElement__c</fullName>
    <label>Data Post Retention</label>
    <length>150</length>
    <type>Text</type>
</CustomField>