Instant Address Standard/main/default/objects/ServiceOutput__c/fields/DataRetentionElement1__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionElement1__c</fullName>
    <label>Data Retention 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>