Instant Address Standard/main/default/objects/ServiceOutput__c/fields/DataRetentionElement2__c.field-meta.xml
<CustomField>
    <fullName>DataRetentionElement2__c</fullName>
    <label>Data Retention 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>