Instant Address Standard/main/default/objects/ServiceOutput__c/fields/DPC__c.field-meta.xml
<CustomField>
    <fullName>DPC__c</fullName>
    <label>Delivery Point Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>