Instant Address Standard/main/default/objects/ServiceOutput__c/fields/DPCD__c.field-meta.xml
<CustomField>
    <fullName>DPCD__c</fullName>
    <label>Delivery Point Digit</label>
    <length>1</length>
    <type>Text</type>
</CustomField>