Instant Address Standard/main/default/objects/ServiceOutput__c/fields/DPV__c.field-meta.xml
<CustomField>
    <fullName>DPV__c</fullName>
    <label>DPV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>