Instant Address Standard/main/default/objects/ServiceOutput__c/fields/DPVF__c.field-meta.xml
<CustomField>
    <fullName>DPVF__c</fullName>
    <label>DPVF</label>
    <length>1</length>
    <type>Text</type>
</CustomField>