Instant Address Standard/main/default/objects/ServiceOutput__c/fields/eLOTCode__c.field-meta.xml
<CustomField>
    <fullName>eLOTCode__c</fullName>
    <label>eLOT Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>