Instant Address Standard/main/default/objects/ServiceOutput__c/fields/eLOTNumber__c.field-meta.xml
<CustomField>
    <fullName>eLOTNumber__c</fullName>
    <label>eLOT Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>