Instant Address Standard/main/default/objects/ServiceOutput__c/fields/ErrorData__c.field-meta.xml
<CustomField>
    <fullName>ErrorData__c</fullName>
    <label>Error Data</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>