Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FinancialNumber__c.field-meta.xml
<CustomField>
    <fullName>FinancialNumber__c</fullName>
    <label>Financial Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>