Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FIPS__c.field-meta.xml
<CustomField>
    <fullName>FIPS__c</fullName>
    <label>FIPS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>