Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FR_Address1__c.field-meta.xml
<CustomField>
    <fullName>FR_Address1__c</fullName>
    <label>Formatted Address 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>