Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FR_Address2__c.field-meta.xml
<CustomField>
    <fullName>FR_Address2__c</fullName>
    <label>Formatted Address 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>