Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FR_Address3__c.field-meta.xml
<CustomField>
    <fullName>FR_Address3__c</fullName>
    <label>Formatted Address 3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>