Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FR_City__c.field-meta.xml
<CustomField>
    <fullName>FR_City__c</fullName>
    <label>Formatted City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>