Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FR_Country__c.field-meta.xml
<CustomField>
    <fullName>FR_Country__c</fullName>
    <label>Formatted Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>