Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FR_State__c.field-meta.xml
<CustomField>
    <fullName>FR_State__c</fullName>
    <label>Formatted State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>