Instant Address Standard/main/default/objects/ServiceOutput__c/fields/FR_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>FR_Zipcode__c</fullName>
    <label>Formatted Zipcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>