Instant Address Standard/main/default/objects/ServiceOutput__c/fields/GovernmentFlag__c.field-meta.xml
<CustomField>
    <fullName>GovernmentFlag__c</fullName>
    <label>Government Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>