Instant Address Standard/main/default/objects/ServiceOutput__c/fields/HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>HouseNumber__c</fullName>
    <label>House number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>