Instant Address Standard/main/default/objects/ServiceOutput__c/fields/HouseNumberHigh__c.field-meta.xml
<CustomField>
    <fullName>HouseNumberHigh__c</fullName>
    <label>House Number High</label>
    <length>10</length>
    <type>Text</type>
</CustomField>