Instant Address Standard/main/default/objects/ServiceOutput__c/fields/HouseNumberLow__c.field-meta.xml
<CustomField>
    <fullName>HouseNumberLow__c</fullName>
    <label>House Number Low</label>
    <length>10</length>
    <type>Text</type>
</CustomField>