Instant Address Standard/main/default/objects/ServiceOutput__c/fields/HouseNumberParity__c.field-meta.xml
<CustomField>
    <fullName>HouseNumberParity__c</fullName>
    <label>House Number Parity</label>
    <length>1</length>
    <type>Text</type>
</CustomField>