Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_Address1__c.field-meta.xml
<CustomField>
    <fullName>IA_Address1__c</fullName>
    <label>Input Address 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>