Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_Address2__c.field-meta.xml
<CustomField>
    <fullName>IA_Address2__c</fullName>
    <label>Input Address 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>