Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_BatchID__c.field-meta.xml
<CustomField>
    <fullName>IA_BatchID__c</fullName>
    <label>Batch ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>