Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_City__c.field-meta.xml
<CustomField>
    <fullName>IA_City__c</fullName>
    <label>Input City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>