Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_Country__c.field-meta.xml
<CustomField>
    <fullName>IA_Country__c</fullName>
    <label>Input Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>