Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_Reference2__c.field-meta.xml
<CustomField>
    <fullName>IA_Reference2__c</fullName>
    <label>Input Reference 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>