Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_State__c.field-meta.xml
<CustomField>
    <fullName>IA_State__c</fullName>
    <label>Input State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>