Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_Zip4__c.field-meta.xml
<CustomField>
    <fullName>IA_Zip4__c</fullName>
    <label>Input Zip4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>