Instant Address Standard/main/default/objects/ServiceOutput__c/fields/IA_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>IA_Zipcode__c</fullName>
    <label>Input Zipcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>