Instant Address Standard/main/default/objects/ServiceOutput__c/fields/LACSFlag__c.field-meta.xml
<CustomField>
    <fullName>LACSFlag__c</fullName>
    <label>LACS Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>