Instant Address Standard/main/default/objects/ServiceOutput__c/fields/mesa__c.field-meta.xml
<CustomField>
    <fullName>mesa__c</fullName>
    <label>Metropolitan Statistical Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>