Instant Address Standard/main/default/objects/ServiceOutput__c/fields/misa__c.field-meta.xml
<CustomField>
    <fullName>misa__c</fullName>
    <label>Micropolitan Statitstical Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>