Instant Address Standard/main/default/objects/ServiceOutput__c/fields/MunicipalityKey__c.field-meta.xml
<CustomField>
    <fullName>MunicipalityKey__c</fullName>
    <label>Municipality Key</label>
    <length>6</length>
    <type>Text</type>
</CustomField>