Instant Address Standard/main/default/objects/ServiceOutput__c/fields/pmsa__c.field-meta.xml
<CustomField>
    <fullName>pmsa__c</fullName>
    <label>Primary Metropolitan Statistical Areas</label>
    <length>20</length>
    <type>Text</type>
</CustomField>