Instant Address Standard/main/default/objects/ServiceOutput__c/fields/POBox__c.field-meta.xml
<CustomField>
    <fullName>POBox__c</fullName>
    <label>POBox</label>
    <length>50</length>
    <type>Text</type>
</CustomField>