Instant Address Standard/main/default/objects/ServiceOutput__c/fields/POBoxNumber__c.field-meta.xml
<CustomField>
    <fullName>POBoxNumber__c</fullName>
    <label>PO Box Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>