Instant Address Standard/main/default/objects/ServiceOutput__c/fields/PreferredCityName__c.field-meta.xml
<CustomField>
    <fullName>PreferredCityName__c</fullName>
    <label>Preferred City Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>