Instant Address Standard/main/default/objects/ServiceOutput__c/fields/PrivateMailbox__c.field-meta.xml
<CustomField>
    <fullName>PrivateMailbox__c</fullName>
    <label>Private Mailbox</label>
    <length>50</length>
    <type>Text</type>
</CustomField>