Instant Address Standard/main/default/objects/ServiceOutput__c/fields/PrivateMailboxNumber__c.field-meta.xml
<CustomField>
    <fullName>PrivateMailboxNumber__c</fullName>
    <label>Private Mailbox Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>