Instant Address Standard/main/default/objects/ServiceOutput__c/fields/RDI__c.field-meta.xml
<CustomField>
    <fullName>RDI__c</fullName>
    <label>RDI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>