Instant Address Standard/main/default/objects/ServiceOutput__c/fields/RecordKey__c.field-meta.xml
<CustomField>
    <fullName>RecordKey__c</fullName>
    <label>Record Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>