Instant Address Standard/main/default/objects/ServiceOutput__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>