Instant Address Standard/main/default/objects/ServiceOutput__c/fields/ResponseFlag__c.field-meta.xml
<CustomField>
    <fullName>ResponseFlag__c</fullName>
    <label>ResponseFlag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>