Instant Address Standard/main/default/objects/ServiceOutput__c/fields/ResponseFlagDescription__c.field-meta.xml
<CustomField>
    <fullName>ResponseFlagDescription__c</fullName>
    <label>Response Flag Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>