Instant Address Standard/main/default/objects/ServiceOutput__c/fields/SecondaryUnit__c.field-meta.xml
<CustomField>
    <fullName>SecondaryUnit__c</fullName>
    <label>Secondary Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>