Instant Address Standard/main/default/objects/ServiceOutput__c/fields/SecondaryUnitAbbrev__c.field-meta.xml
<CustomField>
    <fullName>SecondaryUnitAbbrev__c</fullName>
    <label>Secondary Unit Abbrev</label>
    <length>200</length>
    <type>Text</type>
</CustomField>