Instant Address Standard/main/default/objects/ServiceOutput__c/fields/SecondaryUnitHigh__c.field-meta.xml
<CustomField>
    <fullName>SecondaryUnitHigh__c</fullName>
    <label>Secondary Unit High</label>
    <length>8</length>
    <type>Text</type>
</CustomField>