Instant Address Standard/main/default/objects/ServiceOutput__c/fields/SecondaryUnitLow__c.field-meta.xml
<CustomField>
    <fullName>SecondaryUnitLow__c</fullName>
    <label>Secondary Unit Low</label>
    <length>8</length>
    <type>Text</type>
</CustomField>