Instant Address Standard/main/default/objects/ServiceOutput__c/fields/SecondaryUnitName__c.field-meta.xml
<CustomField>
    <fullName>SecondaryUnitName__c</fullName>
    <label>Secondary Unit Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>