Instant Address Standard/main/default/objects/ServiceOutput__c/fields/SecondaryUnitParity__c.field-meta.xml
<CustomField>
    <fullName>SecondaryUnitParity__c</fullName>
    <label>Secondary Unit Parity</label>
    <length>1</length>
    <type>Text</type>
</CustomField>