Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StateAbbrev__c.field-meta.xml
<CustomField>
    <fullName>StateAbbrev__c</fullName>
    <label>State Abbrev</label>
    <length>2</length>
    <type>Text</type>
</CustomField>