Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StateID__c.field-meta.xml
<CustomField>
    <fullName>StateID__c</fullName>
    <label>State ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>