Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StateName__c.field-meta.xml
<CustomField>
    <fullName>StateName__c</fullName>
    <label>State Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>