Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetPostfixAbbrev__c.field-meta.xml
<CustomField>
    <fullName>StreetPostfixAbbrev__c</fullName>
    <label>Street Post Directional Abbrev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>