Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetPostFixName__c.field-meta.xml
<CustomField>
    <fullName>StreetPostFixName__c</fullName>
    <label>Street Post Directional Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>