Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetPreDirectionalAbbrev__c.field-meta.xml
<CustomField>
    <fullName>StreetPreDirectionalAbbrev__c</fullName>
    <label>Street Pre Directional Abbrev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>