Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetPreDirectionalName__c.field-meta.xml
<CustomField>
    <fullName>StreetPreDirectionalName__c</fullName>
    <label>Street Pre Directional Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>