Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetPrefixAbbrev__c.field-meta.xml
<CustomField>
    <fullName>StreetPrefixAbbrev__c</fullName>
    <label>Street Prefix Abbrev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>