Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetPrefixName__c.field-meta.xml
<CustomField>
    <fullName>StreetPrefixName__c</fullName>
    <label>Street Prefix Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>