Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetSuffixAbbrev__c.field-meta.xml
<CustomField>
    <fullName>StreetSuffixAbbrev__c</fullName>
    <label>Street Suffix Abbrev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>