Instant Address Standard/main/default/objects/ServiceOutput__c/fields/StreetSuffixName__c.field-meta.xml
<CustomField>
    <fullName>StreetSuffixName__c</fullName>
    <label>Street Suffix Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>