Instant Address Standard/main/default/objects/ServiceOutput__c/fields/Urbanization__c.field-meta.xml
<CustomField>
    <fullName>Urbanization__c</fullName>
    <label>Urbanization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>