Instant Address Standard/main/default/objects/ServiceOutput__c/fields/UrbanizationKey__c.field-meta.xml
<CustomField>
    <fullName>UrbanizationKey__c</fullName>
    <label>Urbanization Key</label>
    <length>6</length>
    <type>Text</type>
</CustomField>