Instant Address Standard/main/default/objects/ServiceOutput__c/fields/verificationFlag__c.field-meta.xml
<CustomField>
    <fullName>verificationFlag__c</fullName>
    <label>VerificationFlag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>