Instant Address Standard/main/default/objects/ServiceOutput__c/fields/VerificationFlagDescription__c.field-meta.xml
<CustomField>
    <fullName>VerificationFlagDescription__c</fullName>
    <label>Verification Flag Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>