Instant Address Standard/main/default/objects/ServiceOutput__c/fields/Zip4__c.field-meta.xml
<CustomField>
    <fullName>Zip4__c</fullName>
    <label>Zip4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>