Instant Address Standard/main/default/objects/ServiceOutput__c/fields/Zip4High__c.field-meta.xml
<CustomField>
    <fullName>Zip4High__c</fullName>
    <label>Zip4 High</label>
    <length>4</length>
    <type>Text</type>
</CustomField>