Instant Address Standard/main/default/objects/ServiceOutput__c/fields/Zip4Low__c.field-meta.xml
<CustomField>
    <fullName>Zip4Low__c</fullName>
    <label>Zip4 Low</label>
    <length>4</length>
    <type>Text</type>
</CustomField>